--- a/style.css
+++ b/style.css
@@ -8,5 +8,9 @@
 }
 
 body {
-  font-family: sans-serif;
+  font-family: monospace;
+  background-color: var(--black);
+  display: grid;
+  place-content: center;
+  padding: 32px;
 }
