--- a/style.css
+++ b/style.css
@@ -11,6 +11,7 @@ body {
   font-family: monospace;
   background-color: var(--black);
   display: grid;
-  place-content: center;
+  justify-content: center;
   padding: 32px;
+  margin-top: 32px;
 }
