--- a/style.css
+++ b/style.css
@@ -58,6 +58,9 @@ letter {
     transform: scaleY(1.2);
     animation: 1s blink infinite ease-in-out;
   }
+  &.active.is-last::before {
+    left: 65%;
+  }
   &.correct {
     color: var(--green);
   }
