Styling marked class

--- a/style.css
+++ b/style.css
@@ -69,6 +69,13 @@ letter {
   }
 }
 
+word {
+  border-bottom: 2px solid transparent;
+  &.marked {
+    border-bottom: 2px solid var(--red);
+  }
+}
+
 @keyframes blink {
   0%,
   25% {
