--- a/style.css
+++ b/style.css
@@ -10,23 +10,23 @@
 body {
   font-family: monospace;
   background-color: var(--black);
-  display: grid;
-  justify-content: center;
-  padding: 32px;
-  margin-top: 32px;
 }
 
 section {
   display: flex;
   flex-direction: column;
-  padding: 16px;
-  gap: 4px;
-  max-width: 500px;
-}
-
-time {
-  font-size: 32px;
-  color: var(--yellow);
+  height: 60vh;
+  justify-content: center;
+  align-items: center;
+  p {
+    width: 500px;
+  }
+  time {
+    margin-bottom: 100px;
+    font-size: 50px;
+    color: var(--yellow);
+    animation: timer 1s infinite;
+  }
 }
 
 input {
@@ -34,7 +34,7 @@ input {
   position: absolute;
   top: 0;
   left: 0;
-  /* opacity: 0; */
+  opacity: 0;
   pointer-events: none;
 }
 
@@ -86,4 +86,22 @@ word {
   75% {
     opacity: 0;
   }
+}
+
+@keyframes timer {
+  0%,49% {
+    color: var(--green);
+  }
+
+  50% {
+    color: var(--yellow);
+  }
+}
+
+#game {
+  display: flex;
+}
+
+#results {
+  display: none;
 }
