--- a/style.css
+++ b/style.css
@@ -20,6 +20,8 @@ section {
   align-items: center;
   p {
     max-width: 500px;
+    display: flex;
+    justify-content: center;
   }
   time {
     margin-bottom: 60px;
@@ -89,7 +91,8 @@ word {
 }
 
 @keyframes timer {
-  0%,49% {
+  0%,
+  49% {
     color: var(--green);
   }
 
