Making colors more vibrant

--- a/style.css
+++ b/style.css
@@ -1,9 +1,9 @@
 :root {
   color-scheme: light dark;
-  --green: #00b722;
-  --yellow: #e5de27;
-  --red: #e23c4c;
-  --black: #1d1c1c;
+  --green: #19d209;
+  --yellow: #ede61f;
+  --red: #d01515;
+  --black: #151515;
   --gray: #c2c2c2;
 }
 
